# SDL2-Warren-Tetris

./: CMakeLists.txt  README.md  compileSourcesHowTo.txt  sdl2-warren-tetris.desktop
executables/game/: CMakeLists.txt  sdl2-warren-tetris.desktop
executables/game/sources/: main.cpp
executables/game/sources/commonFiles/pathsLoadings/: pathsLoadings.cpp  pathsLoadings.h
executables/game/sources/commonFiles/types/: essentials.cpp  essentials.h
executables/game/sources/game/consts/: constexpr.h  fontsSizes.h
executables/game/sources/game/contexts/: gameContext.cpp  gameContext.h
executables/game/sources/game/drawing/: borderDrawing.cpp  borderDrawing.h  drawMatrix.cpp  drawMatrix.h  drawPiece.cpp  drawPiece.h  playerScore.cpp  playerScore.h  squareTexturing.cpp  squareTexturing.h
executables/game/sources/game/gameActions/: checkGameOver.cpp  checkGameOver.h  moveCurrentPieceToMatrix.cpp  moveCurrentPieceToMatrix.h  pieceCollisionTest.cpp  pieceCollisionTest.h  pieceRotationTest.cpp  pieceRotationTest.h  removeCompleteLines.cpp  removeCompleteLines.h
executables/game/sources/game/input/: actAccToInput.cpp  actAccToInput.h  inputsConsts.h  userInput.cpp  userInput.h
executables/game/sources/game/loadFiles/: loadPieceFile.cpp  loadPieceFile.h
executables/game/sources/game/objects/: activePieceThings.cpp  activePieceThings.h  chronoTimer.cpp  chronoTimer.h  globalGameObject.cpp  globalGameObject.h  loadedPieces.cpp  loadedPieces.h  pieceClass.cpp  pieceClass.h  pieceFallSpeedInterface.cpp  pieceFallSpeedInterface.h  randomSingleton.cpp  randomSingleton.h  squareData.cpp  squareData.h
executables/game/sources/game/scores/: bestScores.cpp  bestScores.h  scoreData.cpp  scoreData.h  scoreGraphics.cpp  scoreGraphics.h  scoresInfos.cpp  scoresInfos.h
executables/game/sources/game/structs/: scanLinesInfos.cpp  scanLinesInfos.h  timeOptionsStruct.cpp  timeOptionsStruct.h
executables/game/sources/runGame/initialize/: initErrorLog.cpp  initErrorLog.h  initRendWindow.cpp  initRendWindow.h  initSDL2Comp.cpp
executables/game/sources/runGame/menus/: keycodesInfos.cpp  keycodesInfos.h  mainMenu.cpp  mainMenu.h  mainMenuElements.cpp  mainMenuElements.h
executables/game/sources/runGame/menus/customModeMenu/: customMenuContext.cpp  customMenuContext.h  interface.cpp  interface.h
executables/game/sources/runGame/menus/options/: context.cpp  context.h  optionsMenuElements.cpp  optionsMenuElements.h
libraries/genericLib/: CMakeLists.txt
libraries/genericLib/sources/logging/: logFile.cpp  logFile.h  logsStruct.cpp  logsStruct.h
libraries/genericLib/sources/matrices/: matrixStructs.h
libraries/genericLib/sources/time/: accurateTime.h
libraries/sdl2_wrapper/: CMakeLists.txt
libraries/sdl2_wrapper/sources/prefPath/: prefPathFinder.h
libraries/sdl2_wrapper/sources/sounds/: loadSound.cpp
libraries/sdl2_wrapper/sources/text/: sdl2ttf_font.h
libraries/sdl2_wrapper/sources/texturing/: horizontalGradientTexture.cpp  horizontalGradientTexture.h  rendererWindow.cpp  rendererWindow.h  textureLoader.cpp
libraries/sdl2_wrapper/sources/wrappers/: sdl2_ptr.h
libs/genericLib/: CMakeLists.txt
libs/genericLib/sources/arithmetic/: customArithmetic.cpp  customArithmetic.h
libs/genericLib/sources/customTypes/: positionTypes.h
libs/genericLib/sources/fileSystem/: copyFilesAndDirectories.cpp  copyFilesAndDirectories.h  createNewElementFs.cpp  createNewElementFs.h  fileSystem.h
libs/genericLib/sources/logging/: logFile.cpp  logFile.h  logsStruct.cpp  logsStruct.h
libs/genericLib/sources/matrices/: matrix2D.h  matrix3D.h  matrixStructs.cpp
libs/genericLib/sources/random/: randomGenerator.cpp  randomGenerator.h
libs/genericLib/sources/texts/: textLoader.cpp  textLoader.h
libs/genericLib/sources/time/: accurateTime.cpp  accurateTime.h  dateAndTime.cpp
libs/sdl2_wrapper/: CMakeLists.txt
libs/sdl2_wrapper/sources/consts/: fontsPaths.h
libs/sdl2_wrapper/sources/initialization/: sdl2MixerInit.cpp  sdl2MixerInit.h  sdl2ModuleInit.cpp  sdl2ModuleInit.h
libs/sdl2_wrapper/sources/joystick/: joystickEntity.cpp  joystickEntity.h
libs/sdl2_wrapper/sources/keycodes/: keycodesOverload.cpp  keycodesOverload.h
libs/sdl2_wrapper/sources/sounds/: loadSound.h
sources/game/: CMakeLists.txt
sources/game/sources/: main.cpp
sources/genericLib/: CMakeLists.txt
sources/genericLib/sources/customTypes/: caseAnim.h  positionTypes.cpp
sources/genericLib/sources/fileSystem/: fileSystem.h
sources/genericLib/sources/logging/: logFile.cpp
sources/genericLib/sources/matrices/: matrix2D.h  matrix3D.h  matrixStructs.cpp  matrixStructs.h
sources/genericLib/sources/texts/: textLoader.cpp  textLoader.h
sources/genericLib/sources/time/: accurateTime.cpp  accurateTime.h
sources/sdl2_wrapper/: CMakeLists.txt
sources/sdl2_wrapper/sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/: texturesComponent.h
sources/sdl2_wrapper/sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/: colorComponent.cpp  colorComponent.h  fontsOptions.cpp  fontsOptions.h
sources/sdl2_wrapper/sources/advancedDrawing/texturesDrawing/: 2dimTexturesDrawing.cpp  2dimTexturesDrawing.h  3dimTexturesDrawing.cpp
sources/sdl2_wrapper/sources/advancedDrawing/texturesLoading/: 2dimTexturesLoading.cpp  3dimTexturesLoading.cpp  3dimTexturesLoading.h  animFileTextures.h
sources/sdl2_wrapper/sources/prefPath/: prefPathFinder.cpp
sources/sdl2_wrapper/sources/sounds/: loadSound.cpp
sources/sdl2_wrapper/sources/text/: sdl2ttf_font.h
sources/sdl2_wrapper/sources/texturing/: loadSDL2.cpp  texturesCombo.h
sources/sdl2_wrapper/sources/widgets/buttons/: 3TexturesButtonWidget.cpp  3TexturesButtonWidget.h  highlightButtonWidget.cpp  textButtonWidget.cpp  textButtonWidget.h
sources/sdl2_wrapper/sources/widgets/editBoxes/: bool_editBox.cpp  sint_editBox.h  uint_editBox.cpp
sources/sdl2_wrapper/sources/widgets/editBoxes/subObjects/: boolBoxContentDisplay.cpp  boxEvents.cpp  boxEvents.h  boxRectDisplay.cpp
sources/sdl2_wrapper/sources/wrappers/: rectStream.cpp  sdl2_ptr.h
(+92 files in other folders)
