cmake_minimum_required(VERSION 3.8)

project("sdl2_wrapper" LANGUAGES CXX)

if(UNIX)
	include(GNUInstallDirs)
endif(UNIX)

set(HEADERS
		sources/widgets/buttons/highlightButtonWidget.h
		sources/widgets/buttons/3TexturesButtonWidget.h
		sources/widgets/buttons/buttonFlatWidget.h
		sources/widgets/buttons/textButtonWidget.h
		sources/widgets/editBoxes/subObjects/boolBoxContentDisplay.h
		sources/widgets/editBoxes/subObjects/boxRectDisplay.h
		sources/widgets/editBoxes/subObjects/editBoxes_consts.h
		sources/widgets/editBoxes/subObjects/boxContentDisplay.h
		sources/widgets/editBoxes/subObjects/cursorDrawing.h
		sources/widgets/editBoxes/subObjects/boxEvents.h
		sources/widgets/editBoxes/boxesIncludes.h
		sources/widgets/editBoxes/bool_editBox.h
		sources/widgets/editBoxes/stringEditBox.h
		sources/widgets/editBoxes/uint_editBox.h
		sources/widgets/editBoxes/sint_editBox.h
		sources/prefPath/prefPathFinder.h
		sources/texturing/texturePosition.h
		sources/texturing/rendererWindow.h
		sources/texturing/verticalGradientTexture.h
		sources/texturing/sdl2_sprite.h
		sources/texturing/textureLoader.h
		sources/texturing/loadSDL2.h
		sources/texturing/texturesCombo.h
		sources/keycodes/keycodesOverload.h
		sources/joystick/joystickEntity.h
		sources/consts/fontsPaths.h
		sources/sounds/loadSound.h
		sources/initialization/sdl2TTF_Init.h
		sources/initialization/sdl2MixerInit.h
		sources/initialization/sdl2ModuleInit.h
		sources/text/sdl2ttf_font.h
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/colorComponent.h
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/texturesOptions.h
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/fontsOptions.h
		sources/advancedDrawing/interfaceGeneratorLanguage/interfaceGeneratorConsts.h
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/texturesComponent.h
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/textsBlocksComponent.h
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/fontsScriptLoader.h
		sources/advancedDrawing/texturesLoading/2dimTexturesLoading.h
		sources/advancedDrawing/texturesLoading/animFileTextures.h
		sources/advancedDrawing/texturesLoading/3dimTexturesLoading.h
		sources/advancedDrawing/texturesLoading/fileTexturesList.h
		sources/advancedDrawing/texturesDrawing/2dimTexturesDrawing.h
		sources/advancedDrawing/texturesDrawing/animTexturesDrawing.h
		sources/advancedDrawing/texturesDrawing/constAnimationDrawing.h
		sources/advancedDrawing/texturesDrawing/3dimTexturesDrawing.h
		sources/wrappers/rectStream.h
		sources/wrappers/sdl2_ptr.h
)

set(SOURCES
		sources/widgets/buttons/textButtonWidget.cpp
		sources/widgets/buttons/buttonFlatWidget.cpp
		sources/widgets/buttons/3TexturesButtonWidget.cpp
		sources/widgets/buttons/highlightButtonWidget.cpp
		sources/widgets/editBoxes/subObjects/boolBoxContentDisplay.cpp
		sources/widgets/editBoxes/subObjects/boxRectDisplay.cpp
		sources/widgets/editBoxes/subObjects/boxEvents.cpp
		sources/widgets/editBoxes/subObjects/cursorDrawing.cpp
		sources/widgets/editBoxes/subObjects/boxContentDisplay.cpp
		sources/widgets/editBoxes/sint_editBox.cpp
		sources/widgets/editBoxes/stringEditBox.cpp
		sources/widgets/editBoxes/uint_editBox.cpp
		sources/widgets/editBoxes/bool_editBox.cpp
		sources/prefPath/prefPathFinder.cpp
		sources/texturing/rendererWindow.cpp
		sources/texturing/texturesCombo.cpp
		sources/texturing/verticalGradientTexture.cpp
		sources/texturing/textureLoader.cpp
		sources/texturing/loadSDL2.cpp
		sources/texturing/texturePosition.cpp
		sources/texturing/sdl2_sprite.cpp
		sources/keycodes/keycodesOverload.cpp
		sources/joystick/joystickEntity.cpp
		sources/sounds/loadSound.cpp
		sources/initialization/sdl2ModuleInit.cpp
		sources/initialization/sdl2TTF_Init.cpp
		sources/initialization/sdl2MixerInit.cpp
		sources/text/sdl2ttf_font.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/colorComponent.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/fontsOptions.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/optionsStructs/texturesOptions.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/fontsScriptLoader.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/texturesComponent.cpp
		sources/advancedDrawing/interfaceGeneratorLanguage/elementsLoadingFunctions/textsBlocksComponent.cpp
		sources/advancedDrawing/texturesLoading/fileTexturesList.cpp
		sources/advancedDrawing/texturesLoading/2dimTexturesLoading.cpp
		sources/advancedDrawing/texturesLoading/animFileTextures.cpp
		sources/advancedDrawing/texturesLoading/3dimTexturesLoading.cpp
		sources/advancedDrawing/texturesDrawing/2dimTexturesDrawing.cpp
		sources/advancedDrawing/texturesDrawing/3dimTexturesDrawing.cpp
		sources/advancedDrawing/texturesDrawing/constAnimationDrawing.cpp
		sources/advancedDrawing/texturesDrawing/animTexturesDrawing.cpp
		sources/wrappers/rectStream.cpp
)

add_library(
	${PROJECT_NAME} 
	STATIC
	${SOURCES} 
	${HEADERS} 
	${INC_DIRS}
)

target_include_directories(
	${PROJECT_NAME}
	PUBLIC ${SDL2_INCLUDE_DIRS}
	PUBLIC ${SDL2IMAGE_INCLUDE_DIRS}
	PUBLIC ${SDL2TTF_INCLUDE_DIRS}
	PUBLIC ${SDL2MIXER_INCLUDE_DIRS}
	PUBLIC sources
	PUBLIC ../genericLib/sources
)

target_link_libraries(	
	${PROJECT_NAME} 
	${SDL2_LIBRARIES} 
	${SDL2_IMAGE_LIBRARIES} 
	${SDL2_TTF_LIBRARIES} 
	${SDL2_MIXER_LIBRARIES}
	"genericLib"
)

set_target_properties(	
	${PROJECT_NAME} 
	PROPERTIES 
	CXX_STANDARD 20 
	CXX_STANDARD_REQUIRED YES 
	CXX_EXTENSIONS ON
	LINKER_LANGUAGE CXX
)

if( UNIX )
	install(TARGETS ${PROJECT_NAME}
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	)
endif( UNIX )